--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "spotify-music-downloader",
   "version": "1.0.0",
-  "description": "A simple web app to search and download music from Spotify",
-  "main": "index.js",
+  "description": "A simple web application for downloading music from Spotify.",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"  
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.7",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": "14.x"  
+    "node": "14.x"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JrDev06/spotify-music-downloader.git"
+  },
+  "keywords": [
+    "spotify",
+    "music",
+    "downloader"
+  ],
+  "author": "Jr Busaco",
   "license": "MIT"
 }
