--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "spotify-music-downloader",
   "version": "1.0.0",
   "description": "A simple web application for downloading music from Spotify.",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "cors": "^2.8.5"
-  },
-  "engines": {
-    "node": "14.x"
   },
   "author": "Jr Busaco",
   "license": "MIT"
