--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A simple web application for downloading music from Spotify.",
   "main": "index.js",
+  "type": "module", 
   "scripts": {
     "start": "node index.js"
   },
@@ -10,6 +11,9 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "author": "Jr Busaco",
   "license": "MIT"
